@@ -37,6 +37,16 @@ xyz	ROUT
 01xyz	MOV	r1, #6
 	B	%b01xyz
 
+	; 'test' should be defined a global label
+test	ROUT
+	MOV	r0, #1
+2	MOV	r1, #2
+	MOV	r2, #3
+	B	%2test
+	B	test
+	ROUT
+	B	test
+
 	|
 
 	B	lbl01
@@ -72,6 +82,14 @@ lbl05	MOV	r1, #5
 	B	lbl06
 lbl06	MOV	r1, #6
 	B	lbl06
+
+test
+	MOV	r0, #1
+	MOV	r1, #2
+	MOV	r2, #3
+	B	test + 4
+	B	test
+	B	test
 
 	]
 
